# til

./: .gitignore  :w  README.md  [  ]  arc.dio  capture.sh  cloud-native.md  cow.py  demand-paging.py  docker-compose.yml  fetch.js  for.py  fork-cow.md  github-enterprise.md  github.md  index.js  init.sh  main.py  one-repository-multiple-builds.md  organizing-different-types-of-code.md  package-lock.json  platform-whitepaper.md  roadmap.md  sample_for_gpt_13132357567113844811.py  sudo  tech-stack.md  tmp.md  todo.md
ai/: copilot-agrement.md  copilot-arch.dio  desc-copilot.md  github-6.md  sample-copilot.py  sample-tf.tf  sample-ts.ts
archtectures/: adr.md  saga-pattern.md
aws/: config-value-stores.md  desc-cloud.md  iam-description.md  public-subnet-resource-detect.dio  public-subnet.md  sigv4.md
azure/: init.md
cloud/: other.md
cs/: bios.md  block-layer.md  bool.md  compile.md  container.md  cpu.md  device-access.md  file-system.md  first-abs.dio  it-layer.md  linux-desc.md  load.py  memory-management-system.md  process-management.md  process-scheduler.md  program-lang.md  second-abs.dio  virtual-memory.md  vm.md
ddd/: usecase.md  図について.md
desain-patterns/: README.md  go.mod
errors/: error-value.md
fp/: io-action.md  oo-fp.md  oo-fp2.md  pure-func.md
git/: branch-strategy.md  branch.md  cicd.md  commit-message.md  dev-branch.dio  merge-branch.dio  one-branch.dio  revert.dio  stash.md  what-git.dio  what-git.md
k8s/: README.md  annotate.md  dns設定.md  (+8 more)
security/oauth/backend/: Cargo.toml  Dockerfile  email.sh
security/oauth/backend/src/: main.rs
(+580 files in other folders)
