[package]
name = "rs-web-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
rustls = "0.21.0"
reqwest = "0.11"
serde={version = "1",features = ["derive"]}
serde_json="1"